FIX bug: full-size images don't get aligned properly, more than two images don't get responsive

--- a/assets/sass/app/partials/_article.scss
+++ b/assets/sass/app/partials/_article.scss
@@ -661,6 +661,7 @@ article {
 
 
 img.size-large,
+img.size-full,
 .responsive-image img {
   width: 100%;
   height: auto;
